ebs_forms: intercepta e bloqueia System.exit do applet/Forms, registrando quem pediu
Depois do handshake com o Forms (log 'Versão do Forms Applet é : 10.1.2.3')
a JVM saía com código 1 sem exceção: encerramento deliberado por código do
EBS ou do Forms. Um SecurityManager (-Djava.security.manager=allow) registra
a pilha de quem chamou e nega a saída; só o lançador encerra a JVM.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017vmggBFzttdiwf6wmJH8XU